solution Day22, 2016